--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -1,4 +1,10 @@
 #
+# 'verbose', 'debug', 'info', 'warn', 'error', 'fatal'
+#
+API_LOG_LEVEL=info
+API_LOG_ENABLE_DATA_FOR_CONTEXT=^FieldRepository$
+
+#
 # Auth0 users
 #
 AUTH0_E2E_USERNAME=cypress@codelab.app
