--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -396,7 +396,7 @@ jobs:
 
             pnpm nx e2e web-e2e -c ci \
               --shard=${SHARD}/${CIRCLE_NODE_TOTAL} \
-              --testFiles="modules/auth-guard/auth-guard.spec.ts"
+              --testFiles="modules/demo/demo.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
       - run:
@@ -404,6 +404,8 @@ jobs:
             mkdir -p ~/project/tmp/logs
 
             docker logs $(docker ps --filter "ancestor=neo4j:5.26.3-enterprise" --format "{{.ID}}") > ~/project/tmp/logs/neo4j.log 2>&1
+
+            docker logs $(docker ps --filter "ancestor=cimg/node:22.13.1-browsers" --format "{{.ID}}") > ~/project/tmp/logs/node.log 2>&1
           name: Capture Docker logs
           when: always
       - store_artifacts:
