--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codelab",
   "engines": {
-    "node": ">=22.14.0",
+    "node": ">=18.18.0 <19",
     "yarn": "please-use-pnpm",
     "npm": "please-use-pnpm",
     "pnpm": ">=9.0.0"
@@ -97,7 +97,7 @@
     "@nestjs/core": "11.0.7",
     "@nestjs/cqrs": "11.0.0",
     "@nestjs/event-emitter": "3.0.0",
-    "@nestjs/graphql": "13.0.2",
+    "@nestjs/graphql": "12.2.2",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.7",
     "@nestjs/swagger": "11.0.3",
@@ -187,7 +187,7 @@
     "fs-extra": "11.2.0",
     "glob": "10.3.12",
     "graphql": "16.9.0",
-    "graphql-request": "7.1.2",
+    "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.16.0",
     "import-in-the-middle": "1.12.0",
@@ -296,7 +296,7 @@
     "@graphql-hive/cli": "0.34.0",
     "@jest/globals": "29.7.0",
     "@ls-lint/ls-lint": "2.0.0",
-    "@nestjs/cli": "11.0.2",
+    "@nestjs/cli": "10.4.9",
     "@nestjs/devtools-integration": "0.2.0",
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
@@ -391,7 +391,7 @@
     "autoprefixer": "10.4.14",
     "chance": "1.1.11",
     "change-case-all": "2.1.0",
-    "commitlint-plugin-function-rules": "4.0.1",
+    "commitlint-plugin-function-rules": "3.1.0",
     "concurrently": "7.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
