--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -52,12 +52,15 @@ steps:
 
         pnpm nx e2e web-e2e -c ci \
           --shard=${SHARD}/${CIRCLE_NODE_TOTAL} \
-          --testFiles="modules/demo/demo.spec.ts"
+          --testFiles="modules/demo/demo.spec.ts" \
+          --testFiles="modules/auth-guard/auth-guard.spec.ts"
 
   # https://stackoverflow.com/questions/68916222/docker-build-error-cannot-connect-to-the-docker-daemon-at-unix-var-run-docke/68922177#68922177
   - run:
       name: Capture Docker logs
       command: |
+        set -x
+
         mkdir -p ~/project/tmp/logs
 
         docker logs $(docker ps --filter "ancestor=neo4j:5.26.3-enterprise" --format "{{.ID}}") > ~/project/tmp/logs/neo4j.log 2>&1
