--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,7 +244,6 @@ executors:
   docker-node-neo4j:
     docker:
       - image: cimg/node:18.18.0-browsers
-        name: 127.0.0.1
       - environment:
           NEO4J_ACCEPT_LICENSE_AGREEMENT: 'yes'
           NEO4J_AUTH: neo4j/password
@@ -252,6 +251,7 @@ executors:
           NEO4J_dbms_logs_debug_level: DEBUG
           NEO4J_server_jvm_additional: -XX:+ExitOnOutOfMemoryError
         image: neo4j:5.26.3-enterprise
+      - image: redis:7.0.10
   machine-ubuntu:
     machine:
       image: ubuntu-2004:2022.04.1
@@ -396,11 +396,14 @@ jobs:
 
             pnpm nx e2e web-e2e -c ci \
               --shard=${SHARD}/${CIRCLE_NODE_TOTAL} \
-              --testFiles="modules/demo/demo.spec.ts"
+              --testFiles="modules/demo/demo.spec.ts" \
+              --testFiles="modules/auth-guard/auth-guard.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
       - run:
           command: |
+            set -x
+
             mkdir -p ~/project/tmp/logs
 
             docker logs $(docker ps --filter "ancestor=neo4j:5.26.3-enterprise" --format "{{.ID}}") > ~/project/tmp/logs/neo4j.log 2>&1
