--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -139,6 +139,14 @@ services:
   #   depends_on:
   #     - prometheus
 
+  # Redis service for NestJS queues
+  redis:
+    container_name: redis
+    image: redis:7.0.10
+    ports:
+      - '6379:6379'
+    restart: unless-stopped
+
 volumes:
   codelab-neo4j:
     name: codelab-neo4j
