--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "6.3.1",
     "@nestjs/apollo": "13.0.2",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "11.0.7",
     "@nestjs/config": "4.0.0",
@@ -100,7 +101,9 @@
     "@nestjs/graphql": "12.2.2",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.7",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/swagger": "11.0.3",
+    "@nestjs/websockets": "^11.0.11",
     "@next/bundle-analyzer": "15.1.6",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "1.2.0",
@@ -161,6 +164,7 @@
     "auto-bind": "5.0.1",
     "axios": "1.7.1",
     "body-parser": "1.20.2",
+    "bullmq": "^5.41.7",
     "cache-manager": "^6.4.0",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
@@ -252,6 +256,8 @@
     "rxjs": "7.8.0",
     "server-only": "0.0.1",
     "slugify": "1.6.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "1.5.0",
     "stack-trace": "1.0.0-pre2",
     "storybook": "8.4.7",
@@ -445,6 +451,7 @@
     "swc-loader": "0.2.6",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
+    "ts-jest": "^29.1.0",
     "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
