--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -182,6 +182,9 @@
       "@codelab/backend/infra/adapter/shell": [
         "libs/backend/infra/adapter/shell/src/index.ts"
       ],
+      "@codelab/backend/infra/adapter/ws": [
+        "libs/backend/infra/adapter/ws/src/index.ts"
+      ],
       "@codelab/backend/infra/core": ["libs/backend/infra/core/src/index.ts"],
       "@codelab/backend/shared/errors": [
         "libs/backend/shared/errors/src/index.ts"
