--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -11,10 +11,10 @@ resource_class: << parameters.resource_class >>
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
 
-parallelism: 1
+parallelism: 4
 steps:
-  - setup_remote_docker:
-      version: default
+  # - setup_remote_docker:
+  #     version: default
   - restore-workspace-database
   - setup-neo4j
   - restore_cache:
@@ -51,9 +51,10 @@ steps:
         echo $CIRCLE_NODE_TOTAL;
 
         pnpm nx e2e web-e2e -c ci \
-          --shard=${SHARD}/${CIRCLE_NODE_TOTAL} \
-          --testFiles="modules/demo/demo.spec.ts" \
-          --testFiles="modules/auth-guard/auth-guard.spec.ts"
+          --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
+
+          # --testFiles="modules/demo/demo.spec.ts" \
+          # --testFiles="modules/auth-guard/auth-guard.spec.ts"
 
   # https://stackoverflow.com/questions/68916222/docker-build-error-cannot-connect-to-the-docker-daemon-at-unix-var-run-docke/68922177#68922177
   - run:
@@ -64,8 +65,6 @@ steps:
         mkdir -p ~/project/tmp/logs
 
         docker logs $(docker ps --filter "ancestor=neo4j:5.26.3-enterprise" --format "{{.ID}}") > ~/project/tmp/logs/neo4j.log 2>&1
-
-        docker logs $(docker ps --filter "ancestor=cimg/node:18.18.0-browsers" --format "{{.ID}}") > ~/project/tmp/logs/node.log 2>&1
       # This ensures logs are captured even if previous steps fail
       when: always
   - store_artifacts:
