--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,6 +376,8 @@ jobs:
         type: string
     resource_class: << parameters.resource_class >>
     steps:
+      - setup_remote_docker:
+          version: default
       - restore-workspace-database
       - setup-neo4j
       - restore_cache:
