--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 # Need to add this here so when someone tries to use NPM, an error is thrown
-engine-strict=false
+engine-strict=true
 package-manager-strict=false
 strict-ssl=false
 
