--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -13,6 +13,7 @@ environment:
 
 parallelism: 4
 steps:
+  # This increases memory by double
   - setup_remote_docker:
       version: default
   - restore-workspace-database
