--- a/package.json
+++ b/package.json
@@ -307,24 +307,24 @@
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
     "@next/eslint-plugin-next": "15.1.6",
-    "@nx/devkit": "20.4.6",
-    "@nx/eslint": "20.4.6",
-    "@nx/eslint-plugin": "20.4.6",
-    "@nx/jest": "20.4.6",
-    "@nx/js": "20.4.6",
-    "@nx/nest": "20.4.6",
-    "@nx/next": "20.4.6",
-    "@nx/node": "20.4.6",
-    "@nx/playwright": "20.4.6",
-    "@nx/plugin": "20.4.6",
-    "@nx/react": "20.4.6",
-    "@nx/storybook": "20.4.6",
-    "@nx/vite": "20.4.6",
-    "@nx/web": "20.4.6",
-    "@nx/webpack": "20.4.6",
-    "@nx/workspace": "20.4.6",
+    "@nx/devkit": "20.5.0",
+    "@nx/eslint": "20.5.0",
+    "@nx/eslint-plugin": "20.5.0",
+    "@nx/jest": "20.5.0",
+    "@nx/js": "20.5.0",
+    "@nx/nest": "20.5.0",
+    "@nx/next": "20.5.0",
+    "@nx/node": "20.5.0",
+    "@nx/playwright": "20.5.0",
+    "@nx/plugin": "20.5.0",
+    "@nx/react": "20.5.0",
+    "@nx/storybook": "20.5.0",
+    "@nx/vite": "20.5.0",
+    "@nx/web": "20.5.0",
+    "@nx/webpack": "20.5.0",
+    "@nx/workspace": "20.5.0",
     "@parcel/watcher": "2.4.1",
-    "@playwright/test": "1.50.1",
+    "@playwright/test": "1.51.0",
     "@sentry/types": "8.54.0",
     "@sentry/utils": "8.54.0",
     "@storybook/addon-essentials": "8.4.7",
@@ -438,6 +438,7 @@
     "jest-environment-node": "29.7.0",
     "jest-junit": "16.0.0",
     "jest-transform-stub": "2.0.0",
+    "jiti": "2.4.2",
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "knip": "5.29.2",
@@ -445,7 +446,7 @@
     "minimatch": "9.0.4",
     "msw": "2.7.0",
     "msw-storybook-addon": "2.0.4",
-    "nx": "20.4.6",
+    "nx": "20.5.0",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
     "swc-loader": "0.2.6",
@@ -456,7 +457,7 @@
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
     "utility-types": "3.10.0",
-    "vite": "5.3.3",
+    "vite": "6.2.1",
     "wait-on": "6.0.1"
   },
   "pnpm": {
