--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -10,6 +10,7 @@ resource_class: << parameters.resource_class >>
 
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
+  PLAYWRIGHT_HTML_OUTPUT_DIR: ~/project/tmp/reports/e2e/html-report
 
 parallelism: 4
 steps:
@@ -54,6 +55,9 @@ steps:
         pnpm nx e2e web-e2e -c ci \
           --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
 
+        pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
+
+        # --testFiles="modules/demo/demo.spec.ts" \
           # --testFiles="modules/demo/demo.spec.ts" \
           # --testFiles="modules/auth-guard/auth-guard.spec.ts"
 
@@ -81,4 +85,4 @@ steps:
   #       path: ~/project/dist/.playwright/apps/web-e2e/src/data
   #       destination: playwright/data
   - store_test_results:
-      path: ~/project/tmp/reports/e2e
+      path: ~/project/tmp/reports/e2e/junit
