--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,6 +367,7 @@ jobs:
   e2e:
     environment:
       NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
+      PLAYWRIGHT_HTML_OUTPUT_DIR: ~/project/tmp/reports/e2e/html-report
     executor: docker-node-neo4j
     parallelism: 4
     parameters:
@@ -397,10 +398,16 @@ jobs:
             pnpm nx e2e web-e2e -c ci \
               --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
 
+            # --testFiles="modules/demo/demo.spec.ts" \
               # --testFiles="modules/demo/demo.spec.ts" \
               # --testFiles="modules/auth-guard/auth-guard.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
+      - command: |
+          pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
+        name: Merge Playwright Reports
+        run: null
+        when: always
       - run:
           command: |
             set -x
@@ -417,7 +424,7 @@ jobs:
           destination: playwright-report
           path: ~/project/tmp/reports/e2e
       - store_test_results:
-          path: ~/project/tmp/reports/e2e
+          path: ~/project/tmp/reports/e2e/junit
   integration:
     environment:
       NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
