--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -403,11 +403,11 @@ jobs:
               # --testFiles="modules/auth-guard/auth-guard.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
-      - command: |
-          pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
-        name: Merge Playwright Reports
-        run: null
-        when: always
+      - run:
+          command: |
+            pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
+          name: Merge Playwright Reports
+          when: always
       - run:
           command: |
             set -x
