--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -16,13 +16,11 @@ steps:
       command: (./scripts/nx/reset-cache.sh)
   - run:
       command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
-  # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
-  # Can also use cache, but we're using workspace for simplicity
+  # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#circleci
   - save_cache:
       name: 'Save NX Cache'
       key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
       paths:
         - ~/project/.nx/cache
         # https://github.com/nrwl/nx/issues/5221
-        # - ~/project/dist/apps/web/.next/cache
-        - ~/project/dist/apps/web/.next
+        - ~/project/dist/apps/web/.next/cache
