--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ commands:
           main-branch-name: master
       - restore_cache:
           keys:
+            - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/apps/web/.next/ci-lock.yaml" }}
             - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
             - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
             - nx-cache-
@@ -16,11 +17,12 @@ commands:
       - run:
           command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
       - save_cache:
-          key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+          key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/apps/web/.next/ci-lock.yaml" }}
           name: Save NX Cache
           paths:
             - ~/project/.nx/cache
-            - ~/project/dist/apps/web/.next
+            - ~/project/dist/apps/web/.next/cache
+            - ~/project/dist/apps/web/.next/ci-lock.yaml
   build-nx-libs:
     description: Build Nx Libs
     steps:
@@ -367,7 +369,6 @@ jobs:
   e2e:
     environment:
       NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
-      PLAYWRIGHT_HTML_OUTPUT_DIR: ~/project/tmp/reports/e2e/html-report
     executor: docker-node-neo4j
     parallelism: 4
     parameters:
@@ -403,11 +404,6 @@ jobs:
               # --testFiles="modules/auth-guard/auth-guard.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
-      - run:
-          command: |
-            pnpm playwright merge-reports --reporter html ~/project/tmp/reports/e2e/all-blob-reports
-          name: Merge Playwright Reports
-          when: always
       - run:
           command: |
             set -x
