--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -8,22 +8,20 @@ steps:
   - restore_cache:
       name: 'Restore NX Cache'
       keys:
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/apps/web/.next/ci-lock.yaml" }}
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
         - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
         - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
         - nx-cache-
-  - run:
-      name: 'Monitor NX Cache Size'
-      command: (./scripts/nx/reset-cache.sh)
+  # - run:
+  #     name: 'Monitor NX Cache Size'
+  #     command: (./scripts/nx/reset-cache.sh)
   - run:
       command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
   # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#circleci
   - save_cache:
       name: 'Save NX Cache'
-      key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/apps/web/.next/ci-lock.yaml" }}
+      key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
       paths:
         - ~/project/.nx/cache
         # https://github.com/nrwl/nx/issues/5221
         - ~/project/dist/apps/web/.next/cache
-        # Custom cache counter
-        - ~/project/dist/apps/web/.next/ci-lock.yaml
