--- a/.circleci/config/commands/build-nx-libs.yml
+++ b/.circleci/config/commands/build-nx-libs.yml
@@ -7,19 +7,17 @@ steps:
   - restore_cache:
       name: 'Restore NX Cache'
       keys:
+        - nx-cache-libs-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
         - nx-cache-libs-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
         - nx-cache-libs-{{ .Environment.CIRCLE_BRANCH }}-
         - nx-cache-libs-
-  - run:
-      name: 'Monitor NX Cache Size'
-      command: (./scripts/nx/reset-cache.sh)
   - run:
       command: pnpm nx run-many --target=build --all --exclude=web,api -c ci
   # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
   - save_cache:
       name: 'Save NX Cache'
       key:
-        nx-cache-libs-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        nx-cache-libs-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
         # nx doesn't use `lockfile.hash` anymore, so move the pnpm
         # - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
