--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -18,14 +18,15 @@ steps:
       version: default
   - restore-workspace-database
   - setup-neo4j
-  - restore_cache:
-      name: 'Restore NX Cache'
-      keys:
-        # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
-        - nx-cache-
+  # We use workspace so it has the latest build
+  # - restore_cache:
+  #     name: 'Restore NX Cache'
+  #     keys:
+  #       # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
+  #       - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "scripts/circleci/cache-lock.yaml" }}
+  #       - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+  #       - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
+  #       - nx-cache-
   - run: pnpm npx playwright install-deps
   # No need since we're not building anything
   # Also very expensive in terms of storage
