--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -14,7 +14,14 @@
         "fullyParallel": false,
         "workers": 1,
         "headed": false,
-        "ui": false
+        "ui": false,
+        "testFiles": [
+          "pages.spec.ts",
+          "resource.spec.ts",
+          "types.spec.ts",
+          "google-fonts.spec.ts",
+          "provider-page-content-container.spec.ts"
+        ]
       },
       "configurations": {
         "test": {},
