--- a/nx.json
+++ b/nx.json
@@ -2,14 +2,6 @@
   "defaultBase": "master",
   "useInferencePlugins": true,
   "parallel": 3,
-  "tasksRunnerOptions": {
-    "default": {
-      "options": {
-        "canTrackAnalytics": true,
-        "showUsageWarnings": true
-      }
-    }
-  },
   "defaultProject": "web",
   "plugins": [
     "@codelab/tsc-check",
@@ -19,6 +11,12 @@
         "targetName": "eslint:lint"
       }
     }
+    // {
+    //   "plugin": "@nx/jest/plugin",
+    //   "options": {
+    //     "targetName": "test"
+    //   }
+    // }
   ],
   "generators": {
     "@nx/workspace": {
@@ -114,15 +112,16 @@
     },
     "@nx/jest:jest": {
       "cache": true,
+      "defaultConfiguration": "test",
       "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.ts"],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "parallel": 1,
-        "passWithNoTests": true
+        "passWithNoTests": true,
+        "jestConfig": "{projectRoot}/jest.config.ts",
+        "runInBand": true
       },
       "configurations": {
-        "dev": {
-          "reporters": ["default"]
-        },
         "test": {
           "reporters": ["default"]
         },
@@ -176,9 +175,6 @@
     "@nx/vite:test": {
       "cache": true,
       "inputs": ["default", "^default"]
-    },
-    "test": {
-      "cache": true
     },
     "lint": {
       "cache": true
