refactor: type schema, application import
refactor: type schema, application import

refactor: type schema, application import

--- a/libs/shared/infra/typebox/tsconfig.json
+++ b/libs/shared/infra/typebox/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
     "noPropertyAccessFromIndexSignature": true
   },
   "files": [],
