--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -327,6 +327,9 @@
       "@codelab/frontend-application-builder/use-cases/page-builder": [
         "libs/frontend/application/builder/src/use-cases/page-builder/index.ts"
       ],
+      "@codelab/frontend-application-builder/use-cases/page-preview": [
+        "libs/frontend/application/builder/src/use-cases/page-preview/index.ts"
+      ],
       "@codelab/frontend-application-builder/use-cases/resize": [
         "libs/frontend/application/builder/src/use-cases/resize/index.ts"
       ],
