--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -540,6 +540,9 @@
       "@codelab/frontend-application-shared-store/loading": [
         "libs/frontend/application/shared/store/src/loading/index.ts"
       ],
+      "@codelab/frontend-application-shared-store/cache": [
+        "libs/frontend/application/shared/store/src/cache/index.ts"
+      ],
       "@codelab/frontend-application-shared-store/pagination": [
         "libs/frontend/application/shared/store/src/pagination/index.ts"
       ],
