--- a/.cursorignore
+++ b/.cursorignore
@@ -1,4 +1,12 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
-/dist/
 /data/
 /infra/
+.next
+dist
+types
+tmp
+examples
+data
+coverage
+# Ignore all directories that start with `.` at root
+/.*
