--- a/.cursorignore
+++ b/.cursorignore
@@ -1,12 +1,11 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
 /data/
 /infra/
-.next
-dist
-types
-tmp
-examples
-data
-coverage
+/types/
+/tmp/
+/examples/
+/coverage/
 # Ignore all directories that start with `.` at root
 /.*
+.next
+dist
