--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -782,73 +782,73 @@ workflows:
                 - staging
           max_old_space_size: 6144
           resource_class: large
-      - lint:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          max_old_space_size: 8192
-          requires:
-            - setup-workspace
-          resource_class: large
-      - build-nx-apps:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          max_old_space_size: 4096
-          requires:
-            - setup-workspace
-          resource_class: large
-      - build-nx-libs:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          max_old_space_size: 4096
-          requires:
-            - setup-workspace
-          resource_class: large
-      - tsc-check:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          requires:
-            - setup-workspace
-          resource_class: large
-      - codegen:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          requires:
-            - setup-workspace
-          resource_class: medium
-      - unit:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          requires:
-            - setup-workspace
-          resource_class: large
-      - integration:
-          filters:
-            branches:
-              ignore:
-                - master
-                - staging
-          max_old_space_size: 8192
-          requires:
-            - setup-workspace
-          resource_class: large
+      # - lint:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     max_old_space_size: 8192
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
+      # - build-nx-apps:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     max_old_space_size: 4096
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
+      # - build-nx-libs:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     max_old_space_size: 4096
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
+      # - tsc-check:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
+      # - codegen:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: medium
+      # - unit:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
+      # - integration:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      #           - staging
+      #     max_old_space_size: 8192
+      #     requires:
+      #       - setup-workspace
+      #     resource_class: large
       - e2e:
           filters:
             branches:
@@ -866,13 +866,13 @@ workflows:
                 - master
                 - staging
           requires:
-            - lint
-            - codegen
-            - unit
-            - integration
-            - build-nx-libs
-            - build-nx-apps
-            - tsc-check
+            # - lint
+            # - codegen
+            # - unit
+            # - integration
+            # - build-nx-libs
+            # - build-nx-apps
+            # - tsc-check
             - e2e
           resource_class: medium
   infra-pr:
