--- a/libs/frontend/presentation/components/css-editor/.eslintrc.json
+++ b/libs/frontend/presentation/components/css-editor/.eslintrc.json
@@ -9,7 +9,9 @@
           "libs/frontend/presentation/components/css-editor/tsconfig.*?.json"
         ]
       },
-      "rules": {}
+      "rules": {
+        "import/no-namespace": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
