--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@rjsf/validator-ajv8": "5.18.3",
     "@sentry/core": "8.54.0",
     "@sentry/nestjs": "8.54.0",
+    "@sentry/nextjs": "8.54.0",
     "@sentry/profiling-node": "8.54.0",
     "@shopify/network": "3.3.0",
     "@sinclair/typebox": "0.34.13",
