--- a/libs/frontend/presentation/components/interface-form/tsconfig.lib.json
+++ b/libs/frontend/presentation/components/interface-form/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
-    "types": ["node", "styled-components"]
+    "types": ["node", "styled-components", "uniforms"]
   },
   "files": [
     "../../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
