--- a/libs/frontend/presentation/components/interface-form/tsconfig.spec.json
+++ b/libs/frontend/presentation/components/interface-form/tsconfig.spec.json
@@ -3,7 +3,13 @@
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node", "@testing-library/jest-dom", "styled-components"]
+    "types": [
+      "jest",
+      "node",
+      "@testing-library/jest-dom",
+      "styled-components",
+      "uniforms"
+    ]
   },
   "include": [
     "jest.mocks.ts",
